<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">AndroidSimpleCalculator</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>

    <string name="strHeader">A Simple Calculator</string>
    <string name="strOutput">Output:</string>
    <string name="str1">1</string>
    <string name="str2">2</string>
    <string name="str3">3</string>
    <string name="str4">4</string>
    <string name="str5">5</string>
    <string name="str6">6</string>
    <string name="str7">7</string>
    <string name="str8">8</string>
    <string name="str9">9</string>
    <string name="str0">0</string>
    <string name="strPlus">+</string>
    <string name="strMinus">-</string>
    <string name="strMultiply">*</string>
    <string name="strDivide">/</string>
    <string name="strClear">C</string>
    <string name="strEquals">=</string>
    <string name="hdrStrMessage">Android Simple Calculator</string>
    
</resources>
